name:                sdl2-demo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/sdl2-demo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Paths_sdl2
  build-depends:       base
  default-language:    Haskell2010

executable demo1
  hs-source-dirs:      src
  main-is:             Demo1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl2
  default-language:    Haskell2010

executable demo2
  hs-source-dirs:      src
  main-is:             Demo2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl2
  default-language:    Haskell2010

executable demo3
  hs-source-dirs:      src
  main-is:             Demo3.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl2
  default-language:    Haskell2010

executable demo4
  hs-source-dirs:      src
  main-is:             Demo4.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl2
  default-language:    Haskell2010

executable demo6
  hs-source-dirs:      src
  main-is:             Demo6.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl2
  default-language:    Haskell2010

executable demo7
  hs-source-dirs:      src
  main-is:             Demo7.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl2
  default-language:    Haskell2010

executable demo8
  hs-source-dirs:      src
  main-is:             Demo8.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl2
  default-language:    Haskell2010

executable demo9
  hs-source-dirs:      src
  main-is:             Demo9.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl2
  default-language:    Haskell2010

executable demo10
  hs-source-dirs:      src
  main-is:             Demo10.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl2
  default-language:    Haskell2010

executable demo11
  hs-source-dirs:      src
  main-is:             Demo11.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl2
  default-language:    Haskell2010

executable demo12
  hs-source-dirs:      src
  main-is:             Demo12.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl2
  default-language:    Haskell2010

executable demo13
  hs-source-dirs:      src
  main-is:             Demo13.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl2
  default-language:    Haskell2010

executable demo14
  hs-source-dirs:      src
  main-is:             Demo14.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl2
  default-language:    Haskell2010

executable demo15
  hs-source-dirs:      src
  main-is:             Demo15.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl2
  default-language:    Haskell2010

executable demo16
  hs-source-dirs:      src
  main-is:             Demo16.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl2
  default-language:    Haskell2010

executable demo17
  hs-source-dirs:      src
  main-is:             Demo17.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl2
  default-language:    Haskell2010

executable demo18
  hs-source-dirs:      src
  main-is:             Demo18.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl2
                     , vector
  default-language:    Haskell2010

executable demo19
  hs-source-dirs:      src
  main-is:             Demo19.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl2
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sdl2-demo
